Add gRPC client configuration and enhance exception handling; update application properties, improve logging, and add integration tests for REST to gRPC flow